cc_binary(
    name = "cloudabi-run",
    srcs = [
        "cloudabi-run.cc",
        "yaml_file_descriptor_factory.cc",
        "yaml_file_descriptor_factory.h",
    ],
    deps = [
        "//src/libcloudabi",
        "//src/libemulator",
        "@org_cloudabi_argdata//:argdata",
        "@org_cloudabi_arpc//:arpc",
        "@org_cloudabi_flower//:flower_protocol",
        "@org_cloudabi_yaml2argdata//:yaml2argdata",
    ],
)
