config_setting(
    name = "linux",
    constraint_values = ["@bazel_tools//platforms:linux"],
)

cc_library(
    name = "libemulator",
    srcs = [
        "config.h",
        "elf.h",
        "emulate.c",
        "futex.c",
        "futex.h",
        "locking.h",
        "numeric_limits.h",
        "posix.c",
        "queue.h",
        "random.c",
        "random.h",
        "refcount.h",
        "rights.h",
        "signals.c",
        "signals.h",
        "str.c",
        "str.h",
        "tidpool.c",
        "tidpool.h",
        "tls.c",
        "tls.h",
    ],
    hdrs = [
        "emulate.h",
        "posix.h",
    ],
    linkopts = select({
        ":linux": [
            "-lpthread",
            "-lrt",
        ],
        "//conditions:default": ["-lpthread"],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_nuxinl_cloudabi//headers:cloudabi_syscalls_info",
        "@com_github_nuxinl_cloudabi//headers:cloudabi_types",
    ],
)
